--- a/Portfolio/CSS/StyleAccueil.css
+++ b/Portfolio/CSS/StyleAccueil.css
@@ -825,7 +825,7 @@ footer {
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s, box-shadow 0.3s;
+    transition: all 0.3s;
     overflow: hidden;
 }
 
