--- a/Portfolio/CSS/StyleAccueil.css
+++ b/Portfolio/CSS/StyleAccueil.css
@@ -184,6 +184,7 @@ canvas {
     justify-content: center;
     align-items: center;
     background-color: transparent;
+    flex-grow: 1;
 }
 
 .content {
@@ -195,7 +196,7 @@ canvas {
     padding: 0px;
     border-radius: 10px; 
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
  
 h2 {
@@ -623,6 +624,7 @@ footer {
     padding: 40px 20px;
     font-family: 'Inter', sans-serif;
     color: #333;
+    margin-top: auto;
 }
 
 .footer-container {
@@ -966,3 +968,82 @@ footer {
     background-color: rgba(0, 0, 0, 0.8);
   }
   
+
+
+
+
+
+
+
+
+/*Pour les details de projet*/
+.projet {
+    display: none;
+    background-color: #fff;
+    margin: 17vh 20vw 2vh 20vw;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease-in-out;
+    overflow: hidden;
+}
+
+.projet.active {
+    display: block;
+    transform: translateY(0);
+}
+
+.projet-header {
+    display: flex;
+    gap: 20px; 
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.projet-image img {
+    width: 250px;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.projet-title h2 {
+    font-size: 28px;
+    color: #333;
+    margin-bottom: 5px;
+}
+
+.projet-title h3 {
+    font-size: 20px;
+    color: #666;
+}
+
+.projet-body {
+    margin-top: 20px;
+}
+
+.projet-body .description {
+    font-size: 16px;
+    line-height: 1.6;
+    color: #555;
+    margin-bottom: 0;
+    text-align: justify;
+}
+
+.projet-body h4 {
+    font-size: 18px;
+    margin-top: 20px;
+    margin-bottom: 0;
+    color: #333;
+    border-bottom: #333 solid 1px;
+    display: inline-block;
+}
+
+.projet-body ul.technologies {
+}
+
+.projet-body ul.technologies li {
+    font-size: 16px;
+    color: #555;
+    margin-bottom: 5px;
+}
