--- a/Portfolio/CSS/StyleDetails.css
+++ b/Portfolio/CSS/StyleDetails.css
@@ -1,3 +1,15 @@
+html {
+    scroll-behavior: smooth;
+}
+
+body, html {
+    margin: 0;
+    background-attachment: fixed;
+    font-family: 'Inter', sans-serif;
+    overflow-x: hidden;
+    height: 100%;
+}
+
 /*Pour les details de projet*/
 .projet {
     display: none;
