--- a/Portfolio/CSS/StyleAccueil.css
+++ b/Portfolio/CSS/StyleAccueil.css
@@ -143,6 +143,7 @@ canvas {
     display: flex;
     justify-content: space-around;
     width: 100%;
+    border-radius: 10px;
 }
 
 .nav-column nav ul li {
@@ -157,7 +158,8 @@ canvas {
     padding: 8px 16px;
     display: inline-block;
     border-radius: 5px;
-    transition: color 0.3s, transform 0.3s;}
+    transition: all 0.3s, transform 0.3s;
+}
 
 .nav-column nav ul li a:hover {
     color: #1ed3ca;
@@ -365,6 +367,11 @@ img.certif:hover {
     background-color: #24242480;
 }
 
+@media (max-width: 1000px){
+    ::-webkit-scrollbar {
+        width: 0px; 
+    } 
+}
 
 
 
@@ -845,10 +852,12 @@ footer {
 }
 
 .project-image {
-    width: 20%;
-    height: 20%;
+    height: 100px; 
+    width: 100px; 
+    align-self: center;
     margin-left: 20px;
     border-radius: 100%;
+    object-fit: cover;
 }
 
 
