--- a/Portfolio/CSS/StyleDetails.css
+++ b/Portfolio/CSS/StyleDetails.css
@@ -73,8 +73,8 @@ body, html {
     display: inline-block;
 }
 
-.projet-body ul.technologies {
-}
+/*.projet-body ul.technologies {
+}*/
 
 .projet-body ul.technologies li {
     font-size: 16px;
@@ -82,10 +82,104 @@ body, html {
     margin-bottom: 5px;
 }
 
-.projet .img-bonus {
-    display: block; 
-    margin: 20px auto; 
-    width: 80%; 
-    border: gray solid 1px;
+.annexes {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin-top: 20px;
+    flex-wrap: wrap;
+}
+
+.annexes-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.annexes img {
+    width: 384px;
+    height: 216px;
+    object-fit: cover;
+    border-radius: 8px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.annexes img:hover {
+    transform: scale(1.1);
+}
+
+.annexes-item p {
+    margin-top: 5px;
+    font-size: 14px;
+    color: #555;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.popup-content {
+    width: auto;
+    height: 80%;
     border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.popup-close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 40px;
+    color: white;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+.popup-close:hover {
+    color: #1ed3ca;
+    transform: scale(1.1);
+}
+
+
+@media (max-width: 1000px) {
+    .projet {
+        margin: 17vh 10px 2vh 10px;
+    }
+    .projet-header {
+        flex-direction: column;
+        text-align: center;
+    }
+    .projet-image img {
+        width: 70%;
+    }
+    .annexes {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .annexes img {
+        width: 192px;
+        height: 108px;
+        object-fit: cover;
+        border-radius: 8px;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+        transition: all 0.3s ease-in-out;
+        cursor: pointer;
+    }
+
+    .popup-content {
+        width: 90%;
+        height: auto;
+    }
 }
